--- a/SJCAM/SJCAM.csproj
+++ b/SJCAM/SJCAM.csproj
@@ -108,6 +108,7 @@
     <None Include="SJCAM_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="sunset.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
