--- a/SJCAM/SJCAM/project.json
+++ b/SJCAM/SJCAM/project.json
@@ -1,9 +1,6 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "Microsoft.Toolkit.Uwp.UI.Animations": "1.2.0",
-    "Microsoft.Toolkit.Uwp.UI.Controls": "1.2.0",
-    "Win2D.uwp": "1.20.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2"
   },
   "frameworks": {
     "uap10.0": {}
