--- a/SJCAM/SJCAM/SJCAM.csproj
+++ b/SJCAM/SJCAM/SJCAM.csproj
@@ -96,6 +96,9 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Logic\ConnectionStatus.cs" />
+    <Compile Include="Logic\Settings\MultipleOptionsSetting.cs" />
+    <Compile Include="Logic\Settings\Setting.cs" />
+    <Compile Include="Logic\Settings\ToggleSetting.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
