--- a/SJCAM/SJCAM/project.json
+++ b/SJCAM/SJCAM/project.json
@@ -6,6 +6,7 @@
     "Microsoft.Toolkit.Uwp.UI.Animations": "1.2.0",
     "Microsoft.Toolkit.Uwp.UI.Controls": "1.2.0",
     "PullToRefresh.UWP": "0.3.4",
+    "VLC.MediaElement": "0.9.7",
     "WhatsNew.UWP": "1.0.0"
   },
   "frameworks": {
