--- a/SJCAM/SJCAM/SJCAM.csproj
+++ b/SJCAM/SJCAM/SJCAM.csproj
@@ -119,10 +119,17 @@
     <Compile Include="Logic\Settings\MultipleOptionsSetting.cs" />
     <Compile Include="Logic\Settings\Setting.cs" />
     <Compile Include="Logic\Settings\ToggleSetting.cs" />
+    <Compile Include="Logic\StartupModel.cs" />
     <Compile Include="Logic\Wifi\StrenghToString.Converter.cs" />
     <Compile Include="Logic\Wifi\WifiSpot.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\CameraChoose.xaml.cs">
+      <DependentUpon>CameraChoose.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ConnectionPage.xaml.cs">
+      <DependentUpon>ConnectionPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Style\AppColor.cs" />
@@ -177,6 +184,16 @@
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
     <Content Include="background.jpg" />
     <None Include="Package.StoreAssociation.xml" />
+    <Content Include="Images\bg-colored.jpg" />
+    <Content Include="Images\M10.png" />
+    <Content Include="Images\M10Plus.png" />
+    <Content Include="Images\M10WIFI.png" />
+    <Content Include="Images\M20.png" />
+    <Content Include="Images\SJ4000.png" />
+    <Content Include="Images\SJ4000WIFI.png" />
+    <Content Include="Images\SJ5000.png" />
+    <Content Include="Images\SJ5000WIFI.png" />
+    <Content Include="Images\SJ5000X.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -213,6 +230,14 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\CameraChoose.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\ConnectionPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Style\Style.xaml">
       <SubType>Designer</SubType>
