--- a/SJCAM/SJCAM/project.json
+++ b/SJCAM/SJCAM/project.json
@@ -1,13 +1,10 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "Microsoft.Toolkit.Uwp.Services": "1.2.0",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.0",
     "Microsoft.Toolkit.Uwp.UI": "1.2.0",
     "Microsoft.Toolkit.Uwp.UI.Animations": "1.2.0",
     "Microsoft.Toolkit.Uwp.UI.Controls": "1.2.0",
-    "PullToRefresh.UWP": "0.3.4",
-    "VLC.MediaElement": "0.9.7",
-    "WhatsNew.UWP": "1.0.0"
+    "VLC.MediaElement": "0.9.8"
   },
   "frameworks": {
     "uap10.0": {}
